# SQRT_public

./: README.md  mypy.ini  requirements.jl  requirements.txt
2020/: 2020_final.py  2020_final_2.py  2020_final_2_copy.py  2020_final_2_copy_copy.py  2020_final_3.py  2020_final_4.py  2020_finanl_final.py  BTC_binance_decentralization_short.py  CsvMaker.py  EX_trading.py  (+34 more)
2025/: .gitignore  .pylintrc  README.md  go.mod  go.sum  mypy.ini  pyproject.toml  python.json  requirements.jl  vscode-extension.sh
2025/src/sqrt/backtest/db/: add_ohlcv.py
2025/src/sqrt/backtest/krx_816/: daily_backtest.py  get_perform_daily.py  runfile.py  stock_816.jl  stock_816_postprocess.jl  trade_file.py  utils.py
2025/src/sqrt/backtest/pivot/: 1.backtest.jl  2.post_process.py
2025/src/sqrt/backtest/q_turtle/: post_backtest.jl  post_process.py  runfile.jl
2025/src/sqrt/backtest/rsi_div/: backtest.jl  backtest_short.jl  data_converter.py
2025/src/sqrt/monitor/q_turtle/: q_turtle_check.jl
2025/src/sqrt/monitor/rsi/: rsi_monitor.jl
2025/src/sqrt/monitor/streamlit/: app.py
2025/src/sqrt/sandbox/: odbc_test.jl  server_test.jl  server_test.py
2025/src/sqrt/trade/: all_stop.py  runfile.py
2025/src/sqrt/trade/binance/: del.py  rsi_launcher.jl  ws_launcher.jl
2025/src/sqrt/trade/bybit/: del.py  ws_launcher.py
2025/src/sqrt/trade/krx/: main.py  pickle_check.py  utils.py
2025/src/sqrt/trade/utils/: data_downloader.py  order_tool.py  time_tool.py
2025/src/sqrt/trade/utils/jl_module/: binance_data_downloader.jl  crypto_module.jl  utils.jl
2025/src/sqrt/utils/: server.py  utils.jl
(+571 files in other folders)
